update in search result

--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -29,7 +29,8 @@
                     </div>
                   </div>
                   <div class="col-5">
-                    <img src="assets/images/welcome-admin.png" width="300" height="300" alt="" class="welcome-admin position-absolute" />
+                    <img src="assets/images/welcome-admin.png" width="300" height="300" alt=""
+                      class="welcome-admin position-absolute" />
                   </div>
                 </div>
               </mat-card-content>
@@ -38,7 +39,7 @@
         </div>
         <!-- /welcome admin -->
         <!-- employees products employees -->
-        <div class="row mb-4">          
+        <div class="row mb-4">
           <div class="col-4">
             <mat-card class="bg-white shadow-sm product-reward-card p-3 text-center" appearance="outlined">
               <mat-card-content>
@@ -70,11 +71,12 @@
           <!-- data analytics -->
           <div class="col-12">
             <mat-card class="bg-white shadow-sm product-reward-card p-3 mb-4" appearance="outlined">
-              <mat-card-content>                
+              <mat-card-content>
                 <div class="row">
                   <div class="col-5">
-                    <img src="assets/images/products/create-magic.png" width="270" height="270" class="position-absolute gift-selection-overview" alt=""  />
-                  </div>             
+                    <img src="assets/images/products/create-magic.png" width="270" height="270"
+                      class="position-absolute gift-selection-overview" alt="" />
+                  </div>
                   <div class="col-7">
                     <div>
                       <h5 class="fw-bold">Gift Selection Overview</h5>
@@ -93,7 +95,7 @@
             <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
               <mat-card-content>
                 <div>
-                  <h5 class="fw-bold">Employee Picks</h5>
+                  <h5 class="fw-bold">Employee Pick Status</h5>
                 </div>
                 <!-- pie chart -->
                 <div class="pie-chart">
@@ -105,10 +107,9 @@
                 </div>
                 <!-- /pie chart -->
                 <div>
-                  From predictive modeling to real-time analysis, data analytics
-                  empowers businesses to stay ahead of the competition.""With
-                  the right data analytics tools, organizations can enhance
-                  efficiency, reduce risks.
+                  This section provides a comprehensive overview of gift selection progress through
+                  a pie chart. It accurately reflects the percentage of employees who have completed their selection
+                  versus those still pending, enabling efficient tracking and decision-making.
                 </div>
               </mat-card-content>
             </mat-card>
@@ -122,7 +123,7 @@
         <mat-card class="bg-white shadow-sm product-reward-card p-3 h-100" appearance="outlined">
           <mat-card-content>
             <div>
-              <h5 class="fw-bold">Transactions</h5>
+              <h5 class="fw-bold">Product Pick Percentage</h5>
             </div>
             <!-- virtual scroll -->
             <cdk-virtual-scroll-viewport itemSize="80" class="viewport" (scrolledIndexChange)="onScrollProducts()">
