--- a/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
+++ b/client/webUI/src/app/pages/admin/gift-inventory/gift-inventory.component.html
@@ -93,9 +93,10 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
       <!-- /table -->
-      <div class="d-flex justify-content-center mt-2 fw-bold bg-light" *ngIf="dataSource.filteredData.length === 0">
+      <div class="d-flex justify-content-center mt-2 fw-bold bg-light" *ngIf="searchForm.get('searchTerm')?.value && dataSource.data.length === 0">
         No result found.
       </div>
+      <!-- paginator -->
       <mat-paginator class="bg-white" [length]="totalUsers" [pageSize]="pageSize" [pageIndex]="currentPage - 1"
         [pageSizeOptions]="[5, 10, 20]" (page)="onPageChange($event)" showFirstLastButtons
         aria-label="Select page of periodic elements">
