--- a/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
@@ -66,7 +66,7 @@
               <h4 class="fw-bold mb-1">Email</h4>
               <mat-form-field
                 appearance="outline"
-                class="d-block input-lg input bg-light"
+                class="d-block input-lg input opacity-fade"
               >
                 <input matInput formControlName="email" readonly />
                 <mat-icon matSuffix>mail</mat-icon>
@@ -86,7 +86,7 @@
               <h4 class="fw-bold mb-1">DOB</h4>
               <mat-form-field
                 appearance="outline"
-                class="d-block input-lg input bg-light"
+                class="d-block input-lg input opacity-fade"
               >
                 <input
                   matInput
@@ -105,7 +105,7 @@
               <h4 class="fw-bold mb-1">Joining Date</h4>
               <mat-form-field
                 appearance="outline"
-                class="d-block input-lg input bg-light"
+                class="d-block input-lg input opacity-fade"
               >
                 <input
                   matInput
