--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -157,7 +157,7 @@
                 </svg>
               </span>
               <span *ngIf="element.isPrimaryAdmin" matTooltip="primary admin can't be deleted" class="border border-light p-2 shadow-sm table-action-buttons ms-2">
-                <mat-icon class="lock text-success">
+                <mat-icon class="lock text-success position-relative">
                   lock
                 </mat-icon>
               </span>              
