--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <!-- /welcome admin -->
-        <!-- employees products employees -->
+        <!-- employees products suggestions -->
         <div class="row mb-4">
           <div class="col-4">
             <mat-card class="bg-white shadow-sm product-reward-card p-3 text-center" appearance="outlined">
@@ -65,19 +65,18 @@
             </mat-card>
           </div>
         </div>
-        <!-- /employees products employees -->
-        <!-- upgrade data analytics -->
+        <!-- /employees products suggestions -->       
         <div class="row">
-          <!-- data analytics -->
+          <!-- gift selection overview -->
           <div class="col-12">
             <mat-card class="bg-white shadow-sm product-reward-card p-3 mb-4" appearance="outlined">
               <mat-card-content>
                 <div class="row">
-                  <div class="col-5">
-                    <img src="assets/images/products/create-magic.png" width="270" height="270"
+                  <div class="col-3">
+                    <img src="assets/images/products/create-magic.png" width="220" height="220"
                       class="position-absolute gift-selection-overview" alt="" />
                   </div>
-                  <div class="col-7">
+                  <div class="col-9">
                     <div>
                       <h5 class="fw-bold">Gift Selection Overview</h5>
                     </div>
@@ -89,13 +88,13 @@
               </mat-card-content>
             </mat-card>
           </div>
-          <!-- /data analytics -->
-          <!-- upgrade -->
+          <!-- /gift selection overview -->
+          <!-- employee picks status -->
           <div class="col-12">
             <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
               <mat-card-content>
                 <div>
-                  <h5 class="fw-bold">Employee Pick Status</h5>
+                  <h5 class="fw-bold">Employee Picks Status</h5>
                 </div>
                 <!-- pie chart -->
                 <div class="pie-chart">
@@ -114,11 +113,10 @@
               </mat-card-content>
             </mat-card>
           </div>
-          <!-- /upgrade -->
-        </div>
-        <!-- /upgrade data analytics -->
+          <!-- /employee picks status -->
+        </div>        
       </div>
-      <!-- transactions -->
+      <!-- product pick percentage -->
       <div class="col-4">
         <mat-card class="bg-white shadow-sm product-reward-card p-3 h-100" appearance="outlined">
           <mat-card-content>
@@ -185,7 +183,7 @@
           </mat-card-content>
         </mat-card>
       </div>
-      <!-- /transactions -->
+      <!-- /product pick percentage -->
     </div>
   </div>
 </section>
