--- a/client/webUI/src/app/pages/admin/edit-gift-item/edit-gift-item.component.html
+++ b/client/webUI/src/app/pages/admin/edit-gift-item/edit-gift-item.component.html
@@ -39,7 +39,7 @@
               </div>
 
               <div>
-                <button [disabled]="true" mat-flat-button class="button-mh-60 w-100 bg-dark mt-2 claim-gift-btn">
+                <button [disabled]="true" mat-flat-button class="button-mh-60 w-100 bg-dark mt-2 claim-gift-btn opacity-fade">
                   <mat-icon>celebration</mat-icon>claim gift
                 </button>
               </div>
@@ -55,27 +55,12 @@
             <!-- form -->
             <form [formGroup]="editGiftItemForm" (ngSubmit)="onSubmit()">
               <h4 class="fw-bold mb-1">Coupon Code</h4>
-              <mat-form-field appearance="outline" class="d-block input-lg input">
+              <mat-form-field appearance="outline" class="d-block input-lg input opacity-fade">
                 <input matInput formControlName="couponCode" readonly />
                 <mat-icon matSuffix>vpn_key</mat-icon>
                 <mat-error>This is Required</mat-error>
               </mat-form-field>
-              <h4 class="fw-bold mb-1">Product Image</h4>
-              <!-- <mat-form-field appearance="outline" class="d-block input-lg input">
-                <div class="d-flex"><input readonly matInput formControlName="productImage"
-                    [value]="selectedFiles?.name || ''" />
-                  @if (selectedFiles?.name) {
-                  <mat-icon (click)="removeImage()" class="delete-btn">delete</mat-icon>}
-                </div>
-                <mat-error>This is Required</mat-error>
-                @if (!selectedFiles?.name) {
-                <mat-icon matSuffix>cloud_upload</mat-icon>
-                }
-                @if (!selectedFiles?.name) {
-                <input type="file" id="fileInput" class="position-absolute cursor-pointer" name="fileInput"
-                  accept="image/*" (change)="selectFiles($event)" />
-                }
-              </mat-form-field> -->
+              <h4 class="fw-bold mb-1">Product Image</h4>              
               <mat-form-field appearance="outline" class="d-block input-lg input">
                 <div class="d-flex">
                   <input readonly matInput [value]="displayFileName || ''" />
