--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -4,7 +4,7 @@
       <h5 class="fw-bold mb-4">Profile Settings</h5>
     </div>
     <!-- note -->
-    <div class=" w-50 p-4 d-flex align-items-center info shadow-sm fw-bold">
+    <div class=" p-4 d-flex align-items-center info shadow-sm fw-bold">
       <mat-icon class="me-2">info</mat-icon>Admin key comprises of first 3 letters of admin name and dob
         respectively.
     </div>
@@ -88,6 +88,14 @@
           </td>
         </ng-container>
         <!-- /code -->
+        <ng-container matColumnDef="adminKey">
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+            Administrator Key
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.email }}
+          </td>
+        </ng-container>
         <!-- email -->
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
