--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -60,7 +60,7 @@
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
             Administrator Name
           </th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          <td mat-cell  *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
         <!-- /name -->
         <!-- code-->
@@ -93,7 +93,7 @@
             Administrator Key
           </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.email }}
+            {{ element.adminKey }}
           </td>
         </ng-container>
         <!-- email -->
