--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -86,8 +86,23 @@
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
             Administrator Key
           </th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" class="position-relative">
             {{ element.adminKey }}
+            <span class="ms-2"
+              ><mat-icon
+                matSuffix
+                cdkCopyToClipboard="{{ element.adminKey }}"
+                (click)="copied(element.adminKey)"
+                class="admin-copy-icon"
+                >content_copy</mat-icon
+              ></span
+            >
+            <div
+              *ngIf="copiedMap.get(element.adminKey)"
+              class="admin-copy-text fs-12 position-absolute bg-dark text-white"
+            >
+              copied !
+            </div>
           </td>
         </ng-container>
         <!-- email -->
