updated add event component

--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -7,6 +7,9 @@
     <a [routerLink]="['/admin/dashboard']" routerLinkActive="active" class="d-flex text-white p-3 text-decoration-none">
         <mat-icon class="me-4">home</mat-icon>Dashboard
     </a>
+    <a [routerLink]="['/admin/events']" routerLinkActive="active" class="d-flex text-white p-3 text-decoration-none">
+        <mat-icon class="me-4">home</mat-icon>Events
+    </a>
     <a [routerLink]="['/admin/generate-emp-code']" routerLinkActive="active" class="d-flex text-white p-3 text-decoration-none">
         <mat-icon class="me-4">person_add</mat-icon>Generate EmpCode
     </a>
