--- a/client/webUI/src/app/pages/admin/add-event/add-event.component.css
+++ b/client/webUI/src/app/pages/admin/add-event/add-event.component.css
@@ -2,3 +2,17 @@
     right: 10px;
     bottom: -44px;
   }
+
+  #fileInput {  
+    z-index: 10;
+    opacity: 0;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    width: 100%; 
+  }
+  
+  .delete-btn:hover {
+    cursor: pointer !important;
+    color: #ba1a1a;
+  }
