--- a/client/webUI/src/app/pages/admin/events/events.component.html
+++ b/client/webUI/src/app/pages/admin/events/events.component.html
@@ -43,14 +43,14 @@
                 <!-- employee name -->
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
-                        Employee Name
+                        Event Name
                     </th>
                     <td mat-cell *matCellDef="let element">{{ element.name }}</td>
                 </ng-container>
                 <!-- employee code -->
                 <ng-container matColumnDef="employeeCode">
                     <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
-                        Employee Code
+                        Event Image
                     </th>
                     <td mat-cell *matCellDef="let element" class="position-relative">
                         {{ element.employeeCode }}
@@ -59,7 +59,7 @@
                 <!-- email -->
                 <ng-container matColumnDef="email">
                     <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
-                        Email
+                        Event Date
                     </th>
                     <td mat-cell *matCellDef="let element" class="position-relative">
                         {{ element.email }}
@@ -68,7 +68,7 @@
                 <!-- department -->
                 <ng-container matColumnDef="department">
                     <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
-                        Department
+                        Event Time
                     </th>
                     <td mat-cell *matCellDef="let element">
                         {{ element.department }}
@@ -77,7 +77,7 @@
                 <!-- joining date -->
                 <ng-container matColumnDef="joiningDate">
                     <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
-                        Joining Date
+                        Address
                     </th>
                     <td mat-cell *matCellDef="let element">
                         {{ element.joiningDate | date : "dd-MM-yyyy" }}
@@ -86,7 +86,7 @@
                 <!-- dob -->
                 <ng-container matColumnDef="dob">
                     <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
-                        DOB
+                        About
                     </th>
                     <td mat-cell *matCellDef="let element">
                         <div class="p-3">
