--- a/client/webUI/src/app/shared/employee-header/employee-header.component.html
+++ b/client/webUI/src/app/shared/employee-header/employee-header.component.html
@@ -15,7 +15,14 @@
         ><mat-icon>celebration</mat-icon><span>Manage Rewards</span></a
       >
       } @if(isSelectedGiftDetailsPage()){
-      <div class="header-links d-flex">
+      <div class="header-links d-flex align-items-center">
+        <div class="d-flex align-items-center">
+          <a
+        mat-flat-button
+        class="bg-dark py-3 shadow-sm button-mh-45 me-2" [routerLink]="['/upcoming-events']">
+        <mat-icon>campaign</mat-icon>Events</a>
+          <mat-icon>notifications</mat-icon>
+        </div>
         <div class="d-flex align-items-baseline">
           <!-- admin name -->
           <div [matMenuTriggerFor]="menu" class="mx-3 employee d-flex">
