--- a/client/webUI/src/app/shared/employee-header/employee-header.component.css
+++ b/client/webUI/src/app/shared/employee-header/employee-header.component.css
@@ -1,6 +1,9 @@
 .employee:hover {
   cursor: pointer;
 }
+.notification:hover {
+  cursor: pointer;
+}
 
 .dropdown-icon.material-icons {
   font-size: 18px !important;
