--- a/client/webUI/src/app/pages/admin/events/events.component.html
+++ b/client/webUI/src/app/pages/admin/events/events.component.html
@@ -58,12 +58,28 @@
                     </td>
                 </ng-container>
                 <!-- department -->
-                <ng-container matColumnDef="time">
+                <ng-container matColumnDef="startTime">
                     <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
-                        Event Time
+                        Event Start Time
                     </th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.time }}
+                        {{ element.startTime }}
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="endTime">
+                    <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+                        Event End Time
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{ element.endTime }}
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="city">
+                    <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">
+                        City
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{ element.city }}
                     </td>
                 </ng-container>
                 <!-- joining date -->
@@ -141,7 +157,7 @@
             Cancel
         </button>
         <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-        <button mat-button class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4" [mat-dialog-close]="true">
+        <button mat-button class="bg-danger text-white shadow-sm button-mh-45 py-3 px-4" [mat-dialog-close]="true" (click)="matDelete()">
             <mat-icon>delete</mat-icon>
             Delete
         </button>
